# KazinoMonitoring

./: .gitignore  README.md  main.py  pyproject.toml
source_videos/: video3.webm  video4.webm  video5.webm  video6.webm
trackers/: casino_botsort.yaml
